--- a/ajp/Practical 11/pom.xml
+++ b/ajp/Practical 11/pom.xml
@@ -13,3 +13,8 @@
     <artifactId>jersey-hk2</artifactId>
     <version>3.1.10</version>
 </dependency>
+<dependency>
+    <groupId>org.glassfish.jersey.media</groupId>
+    <artifactId>jersey-media-json-jackson</artifactId>
+    <version>3.1.10</version>
+</dependency>
